--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
 
 before_install:
   - pip install --disable-pip-version-check --upgrade pip setuptools
-  - pip install -r dev-requirements.txt
+  - pip install --upgrade -r dev-requirements.txt
   - pip install pycountry
   - if [[ $BUILD_DOCS == 'yes' ]]; then
       pip install -r docs-requirements.txt;
