--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ before_install:
       pip install -r docs-requirements.txt;
       pip install doctr;
     fi
+  - if [[ $BUILD_INSTALLER == 'yes' ]]; then
+      pip install git+https://github.com/takluyver/pynsist.git@88f56f9e86af9c55522147a67f8b7806ac2ca55b;
+    fi
 
 install:
   - pip install -e .
