--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,6 @@ deploy:
   - provider: releases
     api_key: "${RELEASES_API_KEY}"
     file: "${STREAMLINK_INSTALLER_DIST_DIR}/streamlink-${TRAVIS_TAG}.exe"
-    file_glob: true
     skip_cleanup: true
     on:
       tags: true
@@ -97,7 +96,7 @@ deploy:
       repo: streamlink/streamlink
   - provider: releases
     api_key: "${RELEASES_API_KEY}"
-    file: "${STREAMLINK_DIST_DIR}/streamlink-${TRAVIS_TAG}*"
+    file: "${STREAMLINK_DIST_DIR}/streamlink-${TRAVIS_TAG}.tar.gz{,.asc}"
     file_glob: true
     skip_cleanup: true
     on:
