--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ on:
 
 env:
   STREAMLINK_DIST_DIR: ${{ github.workspace }}/dist
+  SIGNING_KEY_ID: 2E390FA0
+  SIGNING_KEY_FILE: ${{ github.workspace }}/signing.key
 
 jobs:
   test:
@@ -77,5 +79,58 @@ jobs:
           python -m pip install pynsist==2.4
           sudo apt update
           sudo apt install -y nsis imagemagick inkscape
+      - name: Installer file name
+        id: installer
+        run: echo ::set-output name=filename::streamlink-$(python setup.py --version | sed 's/+/_/')
       - name: Build
-        run: ./script/makeinstaller.sh
+        run: ./script/makeinstaller.sh "${{ steps.installer.outputs.filename }}"
+      - name: Upload artifact
+        if: github.repository == 'streamlink/streamlink' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: ${{ steps.installer.outputs.filename }}-win32
+          path: ${{ env.STREAMLINK_DIST_DIR }}/${{ steps.installer.outputs.filename }}.exe
+
+  release:
+    name: New release
+    if: github.repository == 'streamlink/streamlink' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    needs:
+      - test
+      - documentation
+      - windows-installer
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 300
+      - name: Fetch tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          ./script/install-dependencies.sh
+          python -m pip install --upgrade wheel twine
+      - name: Installer file name
+        id: installer
+        run: echo ::set-output name=filename::streamlink-$(python setup.py --version | sed 's/+/_/')
+      - name: Download installer artifact
+        uses: actions/download-artifact@v2-preview
+        with:
+          name: ${{ steps.installer.outputs.filename }}-win32
+          path: ${{ env.STREAMLINK_DIST_DIR }}
+      - name: sdist and wheels
+        env:
+          RELEASE_SIGN_KEY: ${{ secrets.RELEASE_SIGN_KEY }}
+          RELEASE_SIGN_IV: ${{ secrets.RELEASE_SIGN_IV }}
+        run: ./script/build-and-sign.sh
+      - name: Github release
+        env:
+          RELEASES_API_KEY: ${{ secrets.RELEASES_API_KEY }}
+        run: ./script/github_releases.py "${STREAMLINK_DIST_DIR}/"*{.exe,.tar.gz{,.asc}}
+      - name: PyPI release
+        env:
+          PYPI_USER: ${{ secrets.PYPI_USER }}
+          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: ./script/deploy-pypi.sh
