--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ exclude =
   venv/,
   versioneer.py,
   win32/,
+per-file-ignores =
+  src/streamlink/__init__.py:E402,
 max-line-length = 128
 show-source = True
 statistics = True
