--- a/setup.cfg
+++ b/setup.cfg
@@ -26,11 +26,13 @@ exclude =
   examples/,
   env/,
   src/streamlink/packages/flashmedia/,
+  script/
   venv/,
   versioneer.py,
   win32/,
 per-file-ignores =
   src/streamlink/__init__.py:E402,F401,
+  src/streamlink/plugin/api/useragents.py:E501,
   src/streamlink/plugins/__init__.py:F401,
   src/streamlink/stream/__init__.py:F401,
   src/streamlink_cli/utils/named_pipe.py:F401,
