--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ env:
   STREAMLINK_DIST_DIR: ${{ github.workspace }}/dist
   SIGNING_KEY_ID: 2E390FA0
   SIGNING_KEY_FILE: ${{ github.workspace }}/signing.key
+  DOCS_KEY_FILE: ${{ github.workspace }}/id_rsa_docs
 
 jobs:
   test:
@@ -118,8 +119,7 @@ jobs:
         run: make --directory=docs html
       - name: Deploy
         env:
-          DOCS_DEPLOY_KEY: ${{ secrets.DOCS_DEPLOY_KEY }}
-          DOCS_DEPLOY_IV: ${{ secrets.DOCS_DEPLOY_IV }}
+          DOCS_KEY_PASSPHRASE: ${{ secrets.DOCS_KEY_PASSPHRASE }}
         run: ./script/deploy-docs.sh
 
   release:
