--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         run: bash ./script/install-dependencies.sh
       - name: Test
         continue-on-error: ${{ matrix.continue }}
-        run: pytest --cov
+        run: pytest -r a --cov
       - name: Lint
         continue-on-error: ${{ matrix.continue }}
         run: flake8
