--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,15 +35,13 @@ jobs:
         run: bash ./script/install-dependencies.sh
       - name: Test
         continue-on-error: ${{ matrix.continue }}
-        run: pytest -r a --cov
+        run: pytest -r a --cov --cov-report=xml
       - name: Lint
         continue-on-error: ${{ matrix.continue }}
         run: flake8
       - name: Upload coverage data
         continue-on-error: ${{ matrix.continue }}
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        run: codecov
+        uses: codecov/codecov-action@v1
 
   documentation:
     name: Test docs
