Drop support for EOL Python 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       # when changing the build matrix, the `after_n_builds` value in codecov.yml may need to be updated
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python: [2.7, 3.5, 3.6, 3.7, 3.8]
+        python: [3.5, 3.6, 3.7, 3.8]
 #       include:
 #         - python: X.Y-dev
 #           continue: true
