--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,6 +158,6 @@ jobs:
         run: ./script/github_releases.py "${STREAMLINK_DIST_DIR}/"*{.exe,.tar.gz{,.asc}}
       - name: PyPI release
         env:
-          PYPI_USER: ${{ secrets.PYPI_USER }}
+          PYPI_USER: streamlink
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: ./script/deploy-pypi.sh
