ci: no test/documentation jobs on scheduled run
These jobs are unnecessary on scheduled builds, since only commits
get merged into master which have passed the tests previously.
Also avoids recurring code coverage uploads if no commits get
merged into master between two scheduled builds.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   test:
     name: Test
+    if: github.event_name != 'schedule'
     strategy:
       fail-fast: false
       # when changing the build matrix, the `after_n_builds` value in codecov.yml may need to be updated
@@ -48,6 +49,7 @@ jobs:
 
   documentation:
     name: Test docs
+    if: github.event_name != 'schedule'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
