--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ insert_final_newline = true
 max_line_length = 128
 trim_trailing_whitespace = true
 
-[*.{cfg,svg,yml}]
+[*.{cfg,svg,toml,yml}]
 indent_size = 2
 
 [*.{md,markdown}]
