--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,9 @@ ignore =
   # W503 - line break before binary operator
   # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
   W503,
+extend-ignore =
+  # See https://github.com/PyCQA/pycodestyle/issues/373
+  E203,
 exclude =
   __pycache__/,
   .git/,
