--- a/.github/ISSUE_TEMPLATE/1_plugin_issue.yml
+++ b/.github/ISSUE_TEMPLATE/1_plugin_issue.yml
@@ -23,7 +23,7 @@ body:
           required: true
         - label: "[I have read the contribution guidelines](https://github.com/streamlink/streamlink/blob/master/CONTRIBUTING.md#contributing-to-streamlink)"
           required: true
-        - label: "[I have checked the list of open and closed plugin issues](https://github.com/streamlink/streamlink/issues?q=is%3Aissue+label%3A%22plugin+issue%22)"
+        - label: "[I have checked the list of open and recently closed plugin issues](https://github.com/streamlink/streamlink/issues?q=is%3Aissue+label%3A%22plugin+issue%22)"
           required: true
         - label: "[I have checked the commit log of the master branch](https://github.com/streamlink/streamlink/commits/master)"
           required: true
