--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,8 @@ jobs:
       - name: Test
         continue-on-error: ${{ matrix.continue || false }}
         run: pytest -r a --cov --cov-branch --cov-report=xml --durations 10
+      - name: Build shell completions
+        run: bash ./script/build-shell-completions.sh
       - name: Upload coverage data
         if: github.event_name != 'schedule'
         continue-on-error: ${{ matrix.continue || false }}
@@ -78,7 +80,7 @@ jobs:
           ./script/install-dependencies.sh
           python -m pip install -r docs-requirements.txt
       - name: Build
-        run: make --directory=docs html
+        run: make --directory=docs html man
 
   windows-installer:
     name: Windows installer
@@ -158,6 +160,8 @@ jobs:
           ./script/install-dependencies.sh
           python -m pip install -r docs-requirements.txt
           python -m pip install --upgrade wheel twine
+      - name: Build shell completions
+        run: ./script/build-shell-completions.sh
       - name: Build man page
         run: make --directory=docs man
       - name: Installer file name
