--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,49 @@
 [metadata]
-license_file = LICENSE
+name = streamlink
+author = Streamlink
+author_email = streamlink@protonmail.com
+description = Streamlink is a command-line utility that extracts streams from various services and pipes them into a video player of choice.
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/streamlink/streamlink
+project_urls =
+  Documentation = https://streamlink.github.io/
+  Tracker = https://github.com/streamlink/streamlink/issues
+  Source = https://github.com/streamlink/streamlink
+  Funding = https://opencollective.com/streamlink
+license = Simplified BSD
+license_files = LICENSE
+classifiers =
+  Development Status :: 5 - Production/Stable
+  License :: OSI Approved :: BSD License
+  Environment :: Console
+  Intended Audience :: End Users/Desktop
+  Operating System :: POSIX
+  Operating System :: MacOS
+  Operating System :: Microsoft :: Windows
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3 :: Only
+  Programming Language :: Python :: 3.6
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
+  Topic :: Internet :: WWW/HTTP
+  Topic :: Multimedia :: Sound/Audio
+  Topic :: Multimedia :: Video
+  Topic :: Utilities
+
+[options]
+python_requires = >=3.6, <4
+package_dir =
+  =src
+packages = find:
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+streamlink.plugins =
+  .removed
 
 [versioneer]
 VCS = git
