stream: remove RTMP and RTMPDump dependency
- drop RTMP stream implementation
- drop RTMP plugin
- drop RTMPDump dependency
- remove stream.streamprocess and utils.{rtmp,swf}
- remove "rtmp" from default stream types list
- remove "rtmp" from player-passthrough options list
- remove all `--rtmp*` CLI args and `rtmp-*` session options
- remove all `--subprocess-*` CLI args and `subprocess` session options,
  as these were used only by StreamProcess which is no longer needed
- update tests
- update docs and CLI argument help texts

--- a/win32/config
+++ b/win32/config
@@ -66,7 +66,7 @@
 # Please note that the player needs to support the streaming protocol
 # and that custom stream implementations in plugins will become unavailable,
 # same as buffering options and those which change the network behavior.
-#player-passthrough=http,hls,rtmp
+#player-passthrough=http,hls
 
 # By default, Streamlink will close the player when the stream is over.
 # Use this option to let the player stay or close itself instead.
@@ -74,11 +74,6 @@
 
 # Show the player's console output
 #verbose-player
-
-# RTMP streams are downloaded using rtmpdump. A full or relative path
-# to the rtmpdump exe should be specified here.
-#rtmp-rtmpdump=C:\Program Files (x86)\Streamlink\rtmpdump\rtmpdump.exe
-rtmp-rtmpdump=rtmpdump.exe
 
 # FFMPEG is used to mux separate video and audio streams in to a single
 # stream so that they can be played. The full or relative path to ffmpeg
