--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,14 @@ python_requires = >=3.6, <4
 package_dir =
   =src
 packages = find:
+install_requires =
+  isodate
+  lxml >=4.6.4,<5.0
+  pycountry
+  pycryptodome >=3.4.3,<4
+  PySocks !=1.5.7,>=1.5.6
+  requests >=2.26.0,<3.0
+  websocket-client >=1.2.1,<2.0
 
 [options.packages.find]
 where = src
