setup: include shell completions in sdist
- move build directory of the shell completions from /build/shtab to
  /completions due to an sdist restriction of setuptools and MANIFEST.in
- recursively include the /completions directory in MANIFEST.in
- update data_files path in setup.py (for inclusion in wheels)
- update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,20 +13,23 @@ nbproject
 *.sublime-workspace
 .idea
 
+/build/
+/completions/
+/docs/_build/
+/dist/
+
 *.mo
 *.egg-info
 *.egg
 *.EGG
 *.EGG-INFO
 bin
-build
 build-win32
 develop-eggs
 downloads
 eggs
 fake-eggs
 parts
-dist
 .installed.cfg
 .mr.developer.cfg
 .hg
@@ -36,7 +39,6 @@ dist
 *.pyo
 *.tmp*
 *.swp
-docs/_build
 include/
 lib/
 local/
