--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Install dependencies
         run: |
           ./script/install-dependencies.sh
-          python -m pip install pynsist
+          python -m pip install pynsist wheel
           sudo apt update
           sudo apt install -y nsis imagemagick inkscape
       - name: Installer file name
