--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,24 @@ method = "null"
 [tool.versioningit.onbuild]
 source-file = "src/streamlink/_version.py"
 build-file = "streamlink/_version.py"
+
+
+# https://coverage.readthedocs.io/en/latest/config.html
+[tool.coverage.run]
+branch = true
+source = [
+  "src",
+  "tests",
+]
+
+[tool.coverage.report]
+omit = [
+  "src/streamlink/packages/*",
+  "src/streamlink_cli/packages/*",
+]
+exclude_lines = [
+  "pragma: no cover",
+  "def __repr__",
+  "raise NotImplementedError",
+  "if __name__ == \"__main__\":",
+]
