--- a/setup.cfg
+++ b/setup.cfg
@@ -54,39 +54,27 @@ ignore =
   # W503 - line break before binary operator
   # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
   W503,
-exclude =
-  __pycache__/,
-  .git/,
+extend-exclude =
   build/,
   dist/,
   docs/,
-  examples/,
   env/,
-  script/
+  examples/,
+  script/,
+  src/streamlink/packages/,
+  src/streamlink_cli/packages/,
   venv/,
-  versioneer.py,
-  win32/,
 per-file-ignores =
-  src/streamlink/__init__.py:E402,F401,I100,I101,I201,I202,I666,
-  src/streamlink/packages/*:I100,I101,I201,I202,I666,
-  src/streamlink/packages/**/*:I100,I101,I201,I202,I666,
+  src/streamlink/__init__.py:F401,I101,I202,
   src/streamlink/plugin/api/useragents.py:E501,
   src/streamlink/plugins/__init__.py:F401,
   src/streamlink/stream/__init__.py:F401,
-  src/streamlink_cli/utils/named_pipe.py:F401,
-  tests/mock.py:F401,F403,
 max-line-length = 128
+count = True
 show-source = True
 statistics = True
-builtins =
-  basestring,
-  file,
-  raw_input,
-  unicode,
-  xrange,
 import-order-style = pycharm
 application-import-names =
   streamlink,
   streamlink_cli,
   tests,
-  versioneer,
