tools: add mypy config
- Add mypy and available typing stubs to dev-requirements
- Add mypy config
- Add py.typed to streamlink + streamlink_cli packages (PEP 561):
  This is required, so that mypy can import types from streamlink when
  installed in editable mode. Don't publish this file for now.
  Once various streamlink APIs are properly typed, typing stub files
  can be added instead.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,12 @@ exclude_lines = [
   "raise NotImplementedError",
   "if __name__ == \"__main__\":",
 ]
+
+
+# https://mypy.readthedocs.io/en/stable/config_file.html
+[tool.mypy]
+python_version = 3.7
+show_error_codes = true
+show_error_context = true
+show_column_numbers = true
+warn_no_return = false
