ci: add useragents workflow
- Update user agents once a month, open pull request via streamlinkbot
- Ignore CI runs when pushing branches with automated changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 name: Test, build and deploy
 
 on:
-  push: {}
+  push:
+    branches-ignore:
+      - 'automated/**'
   pull_request: {}
   schedule:
     - cron: '0 0 * * *'
