--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ package_dir =
   =src
 packages = find:
 install_requires =
+  importlib-metadata ; python_version<"3.8"
   isodate
   lxml >=4.6.4,<5.0
   pycountry
