--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,6 @@ env:
   STREAMLINK_DIST_DIR: ${{ github.workspace }}/dist
   SIGNING_KEY_ID: 2E390FA0
   SIGNING_KEY_FILE: ${{ github.workspace }}/signing.key
-  DOCS_KEY_FILE: ${{ github.workspace }}/id_rsa_docs
 
 jobs:
   test:
@@ -88,14 +87,14 @@ jobs:
       - documentation
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 300
       - name: Fetch tags
         run: git fetch --depth=300 origin +refs/tags/*:refs/tags/*
-      - uses: actions/setup-python@v1
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.10"
       - name: Install dependencies
         run: |
           ./script/install-dependencies.sh
@@ -104,7 +103,7 @@ jobs:
         run: make --directory=docs html
       - name: Deploy
         env:
-          DOCS_KEY_PASSPHRASE: ${{ secrets.DOCS_KEY_PASSPHRASE }}
+          DOCS_DEPLOY_TOKEN: ${{ secrets.DOCS_DEPLOY_TOKEN }}
         run: ./script/deploy-docs.sh
 
   release:
