--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ build-backend = "setuptools.build_meta"
 requires = [
   "setuptools >=45",
   "wheel",
-  "versioningit >=1.1.1, <2",
+  "versioningit >=2.0.0, <3",
 ]
 
 
@@ -15,9 +15,9 @@ default-version = "0.0.0+unknown"
 method = "git"
 
 [tool.versioningit.format]
-distance = "{version}+{distance}.{vcs}{rev}"
-dirty = "{version}+{distance}.{vcs}{rev}.dirty"
-distance-dirty = "{version}+{distance}.{vcs}{rev}.dirty"
+distance = "{base_version}+{distance}.{vcs}{rev}"
+dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
+distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
 
 [tool.versioningit.next-version]
 method = "null"
