plugin: add session typing information
- Add typing information to `Plugin.session`
- Implement `http_session` stub file due to the `HTTPSession` subclass
  of `requests.Session` which adds additional keywords to the
  `request()` method, including all other HTTP-verb methods
- Add `flake8-pyi` and `typing_extensions` to dev-requirements.txt
  (`typing_extensions` is not a runtime dependency)

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,8 @@ ignore =
   # W503 - line break before binary operator
   # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
   W503,
+  # Y037 - Use PEP 604 union types instead of typing.Union
+  Y037,
 extend-exclude =
   build/,
   dist/,
