docs: remove Open Collective
- Rewrite the documentation's donate page
  - Remove donation infos from individual team members
  - Add all team members
  - Fix GitHub username regex in Sphinx extension
- Rewrite the project README
  - Use HTML for centered text, add logo, update badges
  - Rephrase text sections
  - Remove Open Collective and update support section
- Replace all links to Open Collective with a link to the latest docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ project_urls =
   Documentation = https://streamlink.github.io/
   Tracker = https://github.com/streamlink/streamlink/issues
   Source = https://github.com/streamlink/streamlink
-  Funding = https://opencollective.com/streamlink
+  Funding = https://streamlink.github.io/latest/donate.html
 license = Simplified BSD
 license_files = LICENSE
 classifiers =
