script.generate-cdp: refactor
- Add inflection to dev-requirements
- Add argparser
- Add package output path
- Add version selection
- Add domain selection
- Fetch protocol JSON files from gh:ChromeDevTools/devtools-protocol
- Fetch latest version from NPMJS if unset (latest tag by date)
- Include util.py
- Clean up headers and imports of generated modules
- Re-order clean+write logic in output path
- Remove docs/sphinx related stuff
- Remove deprecation notes
- Remove custom protocol patches/hacks
- Fix generated code style
- Fix domain self-references
- Fix command param order

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ source = [
 [tool.coverage.report]
 omit = [
   "src/streamlink/packages/*",
+  "src/streamlink/webbrowser/cdp/devtools/*",
   "src/streamlink_cli/packages/*",
 ]
 exclude_lines = [
@@ -126,6 +127,7 @@ extend-exclude = [
 "src/streamlink/__init__.py" = ["I"]
 "src/streamlink/_version.py" = ["I"]
 "src/streamlink/plugin/api/useragents.py" = ["E501"]
+"src/streamlink/webbrowser/cdp/devtools/*" = ["E501"]
 "src/streamlink_cli/main.py" = ["PLW0603"]
 
 [tool.ruff.isort]
