build: set min-version of typing-extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ install_requires =
   requests >=2.26.0,<3.0
   trio >=0.22.0,<1
   trio-websocket >=0.9.0,<1
-  typing-extensions
+  typing-extensions >=4.0.0
   urllib3 >=1.26.0,<3
   websocket-client >=1.2.1,<2.0
 
