build: project metadata in pyproject.toml PEP621
Move Streamlink's project metadata from setuptools's own `setup.cfg`
to the standardized `pyproject.toml` format (PEP621)

- Bump setuptools to `>=64.0.0`
- Bump pip dev-requirement to `>=21.0.0`
- Set two `author` entries, to keep the same `Author` and `Author-email`
  core metadata in the resulting sdist and bdist packages
- Set `license.text` field instead of `license.file` and add the
  setuptools-specific `license-files` config attribute, so that
  the `License` and `License-File` core metadata doesn't change.
  License data will receive another change in the future once PEP639
  comes into effect
- By switching to PEP621 metadata, implicitly move the `Home-page`
  core metadata to `Project-URL: Homepage, ...`
- Remove upper version constraint from `requires-python`
- Reformat some version strings of the `dependencies` field

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,77 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-  "setuptools >=45",
+  "setuptools >=64",
   "wheel",
   "versioningit >=2.0.0, <3",
 ]
+
+
+# https://peps.python.org/pep-0621/
+# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
+[project]
+name = "streamlink"
+description = """\
+Streamlink is a command-line utility that extracts streams from various services and pipes them into a video player of choice.\
+"""
+readme = "README.md"
+license = { text = "Simplified BSD" }
+authors = [
+  { name = "Streamlink" },
+  { email = "streamlink@protonmail.com" }
+]
+classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "License :: OSI Approved :: BSD License",
+  "Environment :: Console",
+  "Intended Audience :: End Users/Desktop",
+  "Operating System :: POSIX",
+  "Operating System :: MacOS",
+  "Operating System :: Microsoft :: Windows",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Topic :: Internet :: WWW/HTTP",
+  "Topic :: Multimedia :: Sound/Audio",
+  "Topic :: Multimedia :: Video",
+  "Topic :: Utilities",
+]
+
+dynamic = [
+  "version",
+  "entry-points",
+]
+
+requires-python = ">=3.8"
+dependencies = [
+  "certifi",
+  "isodate",
+  "lxml >=4.6.4,<6",
+  "pycountry",
+  "pycryptodome >=3.4.3,<4",
+  "PySocks >=1.5.6,!=1.5.7",
+  "requests >=2.26.0,<3",
+  "trio >=0.22.0,<1",
+  "trio-websocket >=0.9.0,<1",
+  "typing-extensions >=4.0.0",
+  "urllib3 >=1.26.0,<3",
+  "websocket-client >=1.2.1,<2",
+]
+
+[project.urls]
+Homepage = "https://github.com/streamlink/streamlink"
+Documentation = "https://streamlink.github.io/"
+Tracker = "https://github.com/streamlink/streamlink/issues"
+Source = "https://github.com/streamlink/streamlink"
+Funding = "https://streamlink.github.io/latest/donate.html"
+
+
+# https://setuptools.pypa.io/en/stable/userguide/pyproject_config.html
+[tool.setuptools]
+license-files = ["LICENSE"]
 
 
 # https://versioningit.readthedocs.io/en/stable/index.html
