tools: bump ruff to 0.1.14 and fix issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -215,6 +215,7 @@ extend-ignore = [
   "PLC2801",  # unnecessary-dunder-call
   "PLW2901",  # redefined-loop-name
   "RUF021",  # parenthesize-chained-operators
+  "RUF022",  # unsorted-dunder-all
 ]
 extend-exclude = [
   "docs/conf.py",
